cabal-version: 3.0

name:           check-check-telegram-bot
version:        0.1.0.0
build-type:     Simple

executable check-check-telegram-bot
  main-is: Main.hs
  other-modules:
      Clients.AuthService
      Clients.Backend
      Clients.Utils
      Models
      Telegram.Bot.AppM
      Paths_check_check_telegram_bot
  hs-source-dirs:
      src
  default-extensions:
      ConstraintKinds
      DataKinds
      DefaultSignatures
      DerivingStrategies
      DerivingVia
      FunctionalDependencies
      GADTs
      NoStarIsType
      PolyKinds
      StandaloneKindSignatures
      TypeApplications
      TypeFamilies
      TypeOperators
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
  build-depends:
      aeson
    , base
    , bytestring
    , check-check-backend-contracts
    , containers
    , http-client
    , jose
    , mtl
    , optics
    , resource-pool
    , servant
    , servant-auth
    , servant-auth-client
    , servant-client
    , servant-client-core
    , smart-primitives
    , telegram-bot-api
    , telegram-bot-simple
    , telegram-bot-fsafe
    , text
    , time
    , uuid
  default-language: GHC2021
